01-practica/monitoring/monitoring-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: monitoring-ingress
spec:
  rules:
  - host: monitoring-grafana.0.0.0.0.nip.io
    http:
      paths:
      - backend:
          serviceName: prometheus-grafana
          servicePort: 80
  - host: monitoring-prometheus.0.0.0.0.nip.io
    http:
      paths:
      - backend:
          serviceName: prometheus-prometheus-oper-prometheus
          servicePort: 9090
